--- a/yes.html
+++ b/yes.html
@@ -13,13 +13,13 @@
     <div class="hearts-bg"></div>
 
     <div class="container yes-container">
-        <h1 class="yes-title">Knew you would say yes! 🎉</h1>
+        <h1 class="yes-title">na3rfek bech t9oul yes finalement , na3rfek tmout 3ala tsahwik  ! 🎉</h1>
 
         <div class="gif-container">
             <img id="cat-gif" src="https://media.tenor.com/eNHbizSfVb0AAAAj/lovemode-cute.gif" alt="celebrating">
         </div>
 
-        <p class="yes-message">You just made me the happiest person! 💕</p>
+        <p class="yes-message">haya 7adher ro7ek no5rjo net3achew lbara ! 💕</p>
     </div>
 
     <audio id="bg-music" loop>
